<resources>
    <!--  Common strings in the main activity  -->
    <string name="app_name" translatable="false">QA Training App</string>
    <string name="concat_text_placeholder" translatable="false">%1$s%2$s</string>
    <string name="operation_display" translatable="false">%1$s %2$s</string>
    <string name="error_divide_by_zero" translatable="false">Cannot divide by zero</string>

    <!--  Calculator UI buttons strings  -->
    <string name="_0" translatable="false">0</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="equal" translatable="false">=</string>
    <string name="multi" translatable="false">×</string>
    <string name="divide" translatable="false">/</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="ac" translatable="false">AC</string>
    <string name="percent" translatable="false">%</string>
    <string name="pos_neg" translatable="false">+/-</string>
    <string name="dot" translatable="false">.</string>

    <!--  App Login Title Name  -->
    <string name="qa_app_tester" translatable="false">QA Training App</string>

    <!--  App Home Title Name  -->
    <string name="home_title" translatable="false">Menu Options</string>
    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation Drawer</string>
    <string name="register">Register</string>

    <!--  App Register Title Name  -->
    <string name="new_user_registration">New User Registration</string>
    <string name="name">Name</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
</resources>
